--- a/qsenseapp/Views/Shared/_LoginPartial.cshtml
+++ b/qsenseapp/Views/Shared/_LoginPartial.cshtml
@@ -1,4 +1,6 @@
 ﻿@using Microsoft.AspNet.Identity
+@model qsenseapp.Models.ApplicationUser
+
 @if (Request.IsAuthenticated)
 {
     using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm", @class = "navbar-right" }))
@@ -7,7 +9,7 @@
 
     <ul class="nav navbar-nav navbar-right">
         <li>
-            @Html.ActionLink("Hello " + User.Identity.GetUserName(), "Manage", "Account", routeValues: null, htmlAttributes: new { title = "Manage" })
+            @Html.ActionLink("Hello " + @Model.FirstName, "Manage", "Account", routeValues: null, htmlAttributes: new { title = "Manage" })
         </li>
         <li><a href="javascript:document.getElementById('logoutForm').submit()">Log off</a></li>
     </ul>
